Added Hexagon Rotator Widget

--- a/index.html
+++ b/index.html
@@ -176,6 +176,14 @@
           <p>Experiment with 180° rotation and flips on a rectangle, then build the Cayley table yourself to learn group structure.</p>
           <span class="button">Explore Group</span>
         </a>
+        <a href="widgets/hexagon-rotator/hexagon-rotator.html" class="widget-card">
+          <div class="title-row">
+            <h3>Hexagon Rotator</h3>
+            <div class="function">CCW 60° Steps</div>
+          </div>
+          <p>Rotate a regular hexagon counter-clockwise in 60° increments using step buttons. Great for exploring rotational symmetry.</p>
+          <span class="button">Launch Widget</span>
+        </a>
       </div>
 
       <h2>Puzzles & Games</h2>
