--- a/widgets/hexagon-rotator/hexagon-rotator.html
+++ b/widgets/hexagon-rotator/hexagon-rotator.html
@@ -33,6 +33,13 @@
     .start-arrow { stroke: #E60000; stroke-width: 3; fill: none; pointer-events: none; }
     .start-arrowhead { fill: #E60000; stroke: none; pointer-events: none; }
     .start-label { fill: #E60000; font-weight: 700; font-size: 14px; pointer-events: none; }
+    .cayley { width: 100%; max-width: 600px; margin: 1rem auto 0; border-collapse: collapse; table-layout: fixed; }
+    .cayley th, .cayley td { border: 1px solid #ccc; padding: 6px; text-align: center; white-space: nowrap; }
+    .cayley td { width: 72px; }
+    .cayley th { background: #f1f3f5; }
+    .cayley .ok { background: #d4edda; }
+    .cayley .bad { background: #f8d7da; }
+    .legend { text-align: center; margin-top: 0.5rem; color: #666; }
   </style>
   </head>
   <body>
@@ -81,6 +88,14 @@
               <text class="start-label" x="440" y="154">START</text>
             </g>
           </svg>
+
+          <table id="c6table" class="cayley"></table>
+          <div class="legend">
+            <button id="btnCheck" class="widget-action-button">Check Table</button>
+            <button id="btnClear" class="widget-action-button">Clear Table</button>
+            <button id="btnShow" class="widget-action-button">Show Answer</button>
+            <div id="checkMsg" style="margin-top:0.5rem;"></div>
+          </div>
         </main>
       </div>
     </div>
