Fixed Hexagon Rotation Reset Button
Fixed a bug with the reset button that it didn't properly reset as intended.

--- a/widgets/hexagon-rotator/hexagon-rotator.html
+++ b/widgets/hexagon-rotator/hexagon-rotator.html
@@ -33,6 +33,8 @@
     .start-arrow { stroke: #E60000; stroke-width: 3; fill: none; pointer-events: none; }
     .start-arrowhead { fill: #E60000; stroke: none; pointer-events: none; }
     .start-label { fill: #E60000; font-weight: 700; font-size: 14px; pointer-events: none; }
+    #btnReset { background-color: #6c757d; color: white; }
+    #btnReset:hover { background-color: #E60000; color: white; }
     .cayley { width: 100%; max-width: 600px; margin: 1rem auto 0; border-collapse: collapse; table-layout: fixed; }
     .cayley th, .cayley td { border: 1px solid #ccc; padding: 6px; text-align: center; white-space: nowrap; }
     .cayley td { width: 72px; }
