Added Second Difference Explorer
It includes sliders to move around and create sequences on the fly. Perfect for finding recursive and explicit functions!

--- a/index.html
+++ b/index.html
@@ -159,6 +159,15 @@
             transformations, vertex location, and the effects of each parameter.</p>
           <span class="button">Launch Widget</span>
         </a>
+        <a href="widgets/quadratic-sequences/quadratic-differences.html" class="widget-card">
+          <div class="title-row">
+            <h3>Quadratic Sequences: Differences</h3>
+            <div class="function">t(n) = an² + bn + c</div>
+          </div>
+          <p>Build a difference table to see constant second differences (Δ² = 2a).
+            View the first four terms as stars to connect numbers and visuals.</p>
+          <span class="button">Launch Widget</span>
+        </a>
         <a href="widgets/square-completer/square-completer.html" class="widget-card">
           <div class="title-row">
             <h3>Square Completer</h3>
