Created a Linear Sequences Widget

--- a/index.html
+++ b/index.html
@@ -130,6 +130,26 @@
     <div class="container">
       <h1>Interactive Math Learning Widgets</h1>
 
+      <h2>Sequences</h2>
+      <div class="widgets-grid">
+        <a href="widgets/quadratic-sequences/quadratic-differences.html" class="widget-card">
+          <div class="title-row">
+            <h3>Quadratic Sequences Explorer</h3>
+            <div class="function">t(n) = an² + bn + c</div>
+          </div>
+          <p>Explore quadratic sequences with a difference table. See constant second differences (Δ² = 2a), recursive form, interactive highlighting, and randomized practice.</p>
+          <span class="button">Launch Widget</span>
+        </a>
+        <a href="widgets/linear-sequences/linear-sequences.html" class="widget-card">
+          <div class="title-row">
+            <h3>Linear Sequences Explorer</h3>
+            <div class="function">t(n) = an + b</div>
+          </div>
+          <p>Explore linear sequences with a difference table. See constant first differences (Δ = a), recursive form, interactive highlighting, and randomized practice.</p>
+          <span class="button">Launch Widget</span>
+        </a>
+      </div>
+
       <h2>Transformations</h2>
       <div class="widgets-grid">
         <a href="widgets/exponential-explorer/exponential-transformations.html" class="widget-card">
@@ -157,15 +177,6 @@
           </div>
           <p>Explore quadratic functions in both standard and vertex form. Learn about
             transformations, vertex location, and the effects of each parameter.</p>
-          <span class="button">Launch Widget</span>
-        </a>
-        <a href="widgets/quadratic-sequences/quadratic-differences.html" class="widget-card">
-          <div class="title-row">
-            <h3>Quadratic Sequences: Differences</h3>
-            <div class="function">t(n) = an² + bn + c</div>
-          </div>
-          <p>Build a difference table to see constant second differences (Δ² = 2a).
-            View the first four terms as stars to connect numbers and visuals.</p>
           <span class="button">Launch Widget</span>
         </a>
         <a href="widgets/square-completer/square-completer.html" class="widget-card">
