Added a Cubic Sequences Explorer
Should be similar to the other sequences explorers

--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
           <p>Explore linear sequences with a difference table. See constant first differences (Δ = a), recursive form, interactive highlighting, and randomized practice.</p>
           <span class="button">Launch Widget</span>
         </a>
+        <a href="widgets/cubic-sequences/cubic-sequences.html" class="widget-card">
+          <div class="title-row">
+            <h3>Cubic Sequences Explorer</h3>
+            <div class="function">t(n) = an³ + bn² + cn + d</div>
+          </div>
+          <p>Explore cubic sequences with a difference table. See constant third differences (Δ³ = 6a), recursive form, interactive highlighting, and randomized practice.</p>
+          <span class="button">Launch Widget</span>
+        </a>
       </div>
 
       <h2>Transformations</h2>
