Added an Identity button on Hexagon Rotator Widget

--- a/widgets/hexagon-rotator/hexagon-rotator.html
+++ b/widgets/hexagon-rotator/hexagon-rotator.html
@@ -66,6 +66,7 @@
           </div>
 
           <div class="control hex-buttons">
+            <button id="btn0" class="widget-action-button">0°</button>
             <button id="btn60" class="widget-action-button">+60°</button>
             <button id="btn120" class="widget-action-button">+120°</button>
             <button id="btn180" class="widget-action-button">+180°</button>
